fix: media controll alignment, band id and server cors

--- a/src/components/MediaPlayer/MediaPlayer.module.css
+++ b/src/components/MediaPlayer/MediaPlayer.module.css
@@ -12,9 +12,13 @@
   padding: 10px 20px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   /* gap: 50px; */
   height: 70px;
+}
+
+.volBtn {
+  margin-left: auto;
 }
 
 .info {
